<resources>
    <string name="app_name">MyDndApp</string>
    <string name="login_text">Login</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="create_account_button">Create Account</string>
    <string name="submit_button">Submit</string>
    <string name="create_character_button">Create Character</string>
    <string name="view_characters">View Characters</string>
    <string name="add_character">Add Character</string>
    <string name="add_existing_char_info">Add an existing DnD character here</string>
    <string name="character_name">Character Name</string>
    <string name="class_name">Class</string>
    <string name="level">Level</string>
    <string name="barbarian">Barbarian</string>
    <string-array name="classes_array">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string name="background">Background</string>
    <string name="race">Race</string>
    <string-array name="alignment_array">
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>True Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>
    <string name="alignment">Alignment</string>
    <string name="experience_points">Experience Points</string>
    <string name="goto_ability_scores_button_id">Enter Ability Scores</string>
    <string name="ability_scores_screen_name">Enter Your Ability Scores</string>
    <string name="ability_scores_info_message">These should be FINAL ability scores.</string>
    <string name="strength_score_hint">Strength Score</string>
    <string name="dex_score_hint">Dexterity Score</string>
    <string name="constitution_hint">Constitution Score</string>
    <string name="intelligence_hint">Intelligence Score</string>
    <string name="wisdom_hint">Wisdom Score</string>
    <string name="charisma_hint">Charisma Score</string>
    <string name="goto_skill_score_button_text">Enter Skill Scores</string>
    <string name="skill_scores_title">Enter Your Skill Scores</string>
    <string name="acrobatics_hint">Acrobatics Bonus</string>
    <string name="animal_hint">Animal Handling</string>
    <string name="arcana_hint">Arcana Bonus</string>
    <string name="athletics_hint">Athletics Bonus</string>
    <string name="deception_bonus">Deception Bonus</string>
    <string name="history_hint">History Bonus</string>
    <string name="insight_hint">Insight Bonus</string>
    <string name="intim_hint">Intimidation Bonus</string>
    <string name="invest_hint">Investigation Bonus</string>
    <string name="med_hint">Medicine Bonus</string>
    <string name="nature_hint">Nature Bonus</string>
    <string name="perception_hint">Perception Bonus</string>
    <string name="perform_hint">Performance Bonus</string>
    <string name="persuasion_hint">Persuasion Bonus</string>
    <string name="religion_hint">Religion Bonus</string>
    <string name="sleight_hint">Sleight of Hand Bonus</string>
    <string name="stealth_hint">Stealth Bonus</string>
    <string name="survival_hint">Survival Bonus</string>
    <string name="hp_string">Hit Points</string>
    <string name="ac_string">Armor Class</string>
    <string name="proficiencies">Proficiencies</string>


</resources>
